# font-rename

./: README.md  font_rename.py  pyproject.toml
