[tool.poetry]
name = "font-rename"
version = "0.2.0"
description = "Renames fonts to their internal name and unpacks .ttc/.otc files."
authors = ["Wu Haotian <whtsky@gmail.com>"]
license = "MIT"
repository = "https://github.com/whtsky/font-rename/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fonttools = "^4.16.0"
faust-cchardet = "^2.1.19"

[tool.poetry.dev-dependencies]
black = "^24.2.0"
mypy = "^1.9.0"
twine = "^5.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
font-rename = "font_rename:main"
